# zentaku

./: .envexample  .prettierrc  README.md  bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml
src/: app.html  app.pcss  hooks.client.ts  svelte4.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  types.rs
src/lib/: anilist.ts  source.ts  tauri.ts
src/lib/anilist/: changeProgress.gql  changeProgress.ts  followingWatched.gql  followingWatched.ts  getCharacter.gql  getCharacter.ts  getMedia.gql  getMedia.ts  getMediaLists.gql  getMediaLists.ts  getPausedStatus.gql  getPausedStatus.ts  getPlayingStatus.gql  getPlayingStatus.ts  getProfile.gql  getProfile.ts  index.ts  mediaTagVote.gql  mediaTagVote.ts  search.gql  search.ts  toggleFavourite.gql  toggleFavourite.ts
src/lib/stores/: App.ts  Cache.ts  LocalStorage.ts  Player.ts  Settings.ts  SourceStores.ts  Topbar.ts  player.ts  settings.ts  sourceStores.ts  theme.ts
src/lib/ui/: Badge.svelte  ColorPicker.svelte  DatePicker.svelte  Dropdown.svelte  Favourite.svelte  LikeButton.svelte  M2Slider.svelte  Markdown.svelte  Media.svelte  MediaScroll.svelte  Menu.svelte  RangeSlider.svelte  Relative.svelte  ResponsiveImage.svelte  Ripple.svelte  Spoiler.svelte  Tooltip.svelte
src/lib/utils/: Cache.ts  Colors.ts  (+5 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte  Media.svelte  MediaList.svelte  SettingsMismatchDialog.svelte
(+44 files in other folders)
