[package]
name = "otakuzen"
version = "0.1.0"
description = "otakuzen backend"
authors = ["int4"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "otakuzen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2.2.0"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-store = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
rand = "0.8.5"
libaes = "0.7.0"
base64 = "0.22.1"
open = "5.3.1"
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenv_codegen = "0.15.0"

